--- a/day11_reading_journal.ipynb
+++ b/day11_reading_journal.ipynb
@@ -69,13 +69,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event: test\n",
+      "Starting at: 01:00:00\n",
+      "Ending at: 02:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Time(object):\n",
+    "    def __init__(self, hour = 0, minutes = 0, seconds = 0):\n",
+    "        self.hour = hour\n",
+    "        self.minutes = minutes\n",
+    "        self.seconds = seconds   \n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return '%.2d:%.2d:%.2d' % (self.hour, self.minutes, self.seconds)\n",
+    "    \n",
+    "    def time_to_int(time):\n",
+    "        minutes = time.hour * 60 + time.minutes\n",
+    "        seconds = minutes * 60 + time.seconds\n",
+    "        return seconds\n",
+    "\n",
+    "    def int_to_time(seconds):\n",
+    "        time = Time()\n",
+    "        minutes, time.seconds = divmod(seconds, 60)\n",
+    "        time.hour, time.minutes = divmod(minutes, 60)\n",
+    "        return time\n",
+    "\n",
+    "    def __sub__(self, other):\n",
+    "        seconds = time_to_int(self) - time_to_int(other)\n",
+    "        return int_to_time(seconds)\n",
+    "    \n",
+    "class Event(object):\n",
+    "    def __init__(self, name = \"\", start = Time(), end = Time()):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"Event: {}\\nStarting at: {}\\nEnding at: {}\".format(self.name, self.start, self.end)\n",
+    "    \n",
+    "    def duration(self):\n",
+    "        return self.end - self.start\n",
+    "    \n",
+    "test = Event(\"test\", Time(1), Time(2))\n",
+    "print test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,13 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# implemented above\n",
+    "\n",
+    "test = Event(\"test\", Time(1), Time(3))\n",
+    "\n",
+    "print duration(test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,6 +175,8 @@
     "\n",
     "**Quick check: ** How should you store `Event`s within your `Agenda` class?\n",
     "\n",
+    "In a list\n",
+    "\n",
     "Your `Agenda` class should include a `print_agenda` method that prints out your schedule for the day, in order.\n",
     "\n",
     "**Optional:** Include a `is_feasible` method that returns `True` if your schedule has no time conflicts. You may want to write additional helper methods for the `Event` class to make this easier."
@@ -119,13 +184,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Event: machine\n",
+      "Starting at: 09:00:00\n",
+      "Ending at: 12:30:00\n",
+      "Event: chords\n",
+      "Starting at: 10:00:00\n",
+      "Ending at: 12:00:00\n",
+      "Event: McD\n",
+      "Starting at: 11:00:00\n",
+      "Ending at: 12:30:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Agenda(object):\n",
+    "    def __init__(self, contents = None):\n",
+    "        if contents == None:\n",
+    "            contents = []\n",
+    "        self.contents = contents\n",
+    "    \n",
+    "    def print_agenda(self):  \n",
+    "        sorted_events = sorted(self.contents, key=lambda eventz: eventz.start.hour) \n",
+    "        for i in sorted_events:\n",
+    "            print i\n",
+    "        \n",
+    "            \n",
+    "            \n",
+    "mcDonalds = Event(\"McD\", Time(11), Time(12,30))\n",
+    "lift = Event(\"machine\", Time(9), Time(12,30))\n",
+    "powerchods = Event(\"chords\", Time(10), Time(12))\n",
+    "\n",
+    "ErDay = Agenda([mcDonalds, lift, powerchods])\n",
+    "ErDay.print_agenda()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +272,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "About 1 hour "
    ]
   },
   {
