--- a/day12_reading_journal.ipynb
+++ b/day12_reading_journal.ipynb
@@ -37,12 +37,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 18.3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'shuffle' is a method of <class '__main__.Deck'>\n",
+      "[<__main__.Hand object at 0x7fb4937df250>, <__main__.Hand object at 0x7fb492edc350>, <__main__.Hand object at 0x7fb492edc390>, <__main__.Hand object at 0x7fb492edc3d0>]\n",
+      "Hand 0:\n",
+      "Jack of Clubs\n",
+      "9 of Hearts\n",
+      "2 of Spades\n",
+      "5 of Spades\n",
+      "King of Spades\n",
+      "Hand 1:\n",
+      "3 of Clubs\n",
+      "5 of Clubs\n",
+      "Jack of Diamonds\n",
+      "King of Diamonds\n",
+      "10 of Hearts\n",
+      "Hand 2:\n",
+      "8 of Diamonds\n",
+      "5 of Hearts\n",
+      "7 of Hearts\n",
+      "3 of Spades\n",
+      "9 of Spades\n",
+      "Hand 3:\n",
+      "10 of Clubs\n",
+      "King of Clubs\n",
+      "2 of Hearts\n",
+      "Jack of Hearts\n",
+      "Jack of Spades\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"This module contains code from\n",
     "Think Python by Allen B. Downey\n",
@@ -146,8 +179,13 @@
     "        num_hands: number of Hands to return\n",
     "        num_cards: number of Cards per Hand\n",
     "        \"\"\"\n",
-    "        return []   # TODO: Implement (Exercise 3)\n",
-    "\n",
+    "        hand_list = []\n",
+    "        for x in range(0, num_hands):\n",
+    "            hand = Hand()\n",
+    "            self.move_cards(hand, num_cards)\n",
+    "            hand_list.append(hand)\n",
+    "                            \n",
+    "        return hand_list\n",
     "\n",
     "class Hand(Deck):\n",
     "    \"\"\"Represents a hand of playing cards.\"\"\"\n",
@@ -180,6 +218,7 @@
     "    deck = Deck()\n",
     "    deck.shuffle()\n",
     "    hands = deck.deal_hands(4, 5)\n",
+    "    print hands\n",
     "    for i, hand in enumerate(hands):\n",
     "        print \"Hand {}:\".format(i)\n",
     "        hand.sort()\n",
@@ -222,15 +261,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 18.6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 0:\n",
+      "4 of Clubs\n",
+      "Jack of Clubs\n",
+      "6 of Diamonds\n",
+      "9 of Diamonds\n",
+      "7 of Hearts\n",
+      "10 of Hearts\n",
+      "Jack of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Pair\n",
+      "\n",
+      "Trial 1:\n",
+      "3 of Clubs\n",
+      "8 of Clubs\n",
+      "King of Clubs\n",
+      "Queen of Diamonds\n",
+      "6 of Hearts\n",
+      "3 of Spades\n",
+      "10 of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Pair\n",
+      "\n",
+      "Trial 2:\n",
+      "6 of Clubs\n",
+      "5 of Diamonds\n",
+      "4 of Hearts\n",
+      "Jack of Hearts\n",
+      "Ace of Spades\n",
+      "2 of Spades\n",
+      "5 of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Pair\n",
+      "\n",
+      "Trial 3:\n",
+      "Queen of Clubs\n",
+      "Ace of Diamonds\n",
+      "4 of Diamonds\n",
+      "Jack of Diamonds\n",
+      "King of Hearts\n",
+      "4 of Spades\n",
+      "8 of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Pair\n",
+      "\n",
+      "Trial 4:\n",
+      "Ace of Clubs\n",
+      "King of Diamonds\n",
+      "Ace of Hearts\n",
+      "8 of Hearts\n",
+      "9 of Hearts\n",
+      "Queen of Hearts\n",
+      "King of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? True\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Two pair\n",
+      "\n",
+      "Trial 5:\n",
+      "2 of Clubs\n",
+      "9 of Clubs\n",
+      "10 of Diamonds\n",
+      "3 of Hearts\n",
+      "6 of Spades\n",
+      "7 of Spades\n",
+      "Queen of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? False\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "None\n",
+      "\n",
+      "Trial 6:\n",
+      "5 of Clubs\n",
+      "10 of Clubs\n",
+      "2 of Diamonds\n",
+      "3 of Diamonds\n",
+      "7 of Diamonds\n",
+      "5 of Hearts\n",
+      "9 of Spades\n",
+      "Contains flush? False\n",
+      "Contains pair? True\n",
+      "Contains two pair? False\n",
+      "Contains three of a kind? False\n",
+      "Contains full house? False\n",
+      "Contains four of a kind? False\n",
+      "Pair\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "class PokerHand(Hand):\n",
+    "    \n",
+    "    def classify(self):\n",
+    "        if self.has_fourofkind():\n",
+    "            return \"Four of a Kind\"\n",
+    "        elif self.has_fullhouse():\n",
+    "            return \"Full House\"\n",
+    "        elif self.has_flush():\n",
+    "            return \"Flush\"\n",
+    "        elif self.has_threeofkind():\n",
+    "            return \"Three of a Kind\"\n",
+    "        elif self.has_twopair():\n",
+    "            return \"Two pair\"\n",
+    "        elif self.has_pair():\n",
+    "            return \"Pair\"\n",
+    "        else:\n",
+    "            return \"None\"\n",
+    "            \n",
     "\n",
     "    def suit_hist(self):\n",
     "        \"\"\"Builds a histogram of the suits that appear in the hand.\n",
@@ -240,7 +415,40 @@
     "        self.suits = {}\n",
     "        for card in self.cards:\n",
     "            self.suits[card.suit] = self.suits.get(card.suit, 0) + 1\n",
-    "\n",
+    "            \n",
+    "    def rank_hist(self):\n",
+    "        self.ranks = {}\n",
+    "        for card in self.cards:\n",
+    "            self.ranks[card.rank] = self.ranks.get(card.rank, 0) + 1\n",
+    "    \n",
+    "    def has_pair(self):\n",
+    "        self.rank_hist()\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 2:\n",
+    "                return True\n",
+    "        return False\n",
+    "        \n",
+    "        \n",
+    "    def has_twopair(self):\n",
+    "        self.rank_hist()\n",
+    "        counter = 0\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 2:\n",
+    "                counter += 1\n",
+    "        if counter >= 2:\n",
+    "            return True\n",
+    "        return False\n",
+    "                \n",
+    "        \n",
+    "        \n",
+    "    def has_threeofkind(self):\n",
+    "        self.rank_hist()\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 3:\n",
+    "                return True\n",
+    "        return False\n",
+    "                \n",
+    "        \n",
     "    def has_flush(self):\n",
     "        \"\"\"Returns True if the hand has a flush, False otherwise.\n",
     "      \n",
@@ -249,6 +457,29 @@
     "        self.suit_hist()\n",
     "        for val in self.suits.values():\n",
     "            if val >= 5:\n",
+    "                return True\n",
+    "        return False\n",
+    "        \n",
+    "        \n",
+    "    def has_fullhouse(self):\n",
+    "        self.rank_hist()\n",
+    "        condition1 = False\n",
+    "        condition2 = False\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 3:\n",
+    "                condition1 = True\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 2:\n",
+    "                condition2 = True\n",
+    "        if condition1 and condition2:\n",
+    "            return True\n",
+    "        return False\n",
+    "        \n",
+    "        \n",
+    "    def has_fourofkind(self):\n",
+    "        self.rank_hist()\n",
+    "        for rank in self.ranks.values():\n",
+    "            if rank >= 4:\n",
     "                return True\n",
     "        return False\n",
     "\n",
@@ -267,7 +498,14 @@
     "        hand.sort()\n",
     "        print hand\n",
     "        print \"Contains flush?\", hand.has_flush()\n",
-    "        print ''"
+    "        print \"Contains pair?\", hand.has_pair()\n",
+    "        print \"Contains two pair?\", hand.has_twopair()\n",
+    "        print \"Contains three of a kind?\", hand.has_threeofkind()\n",
+    "        print \"Contains full house?\", hand.has_fullhouse()\n",
+    "        print \"Contains four of a kind?\", hand.has_fourofkind()\n",
+    "        print hand.classify()\n",
+    "        print ''\n",
+    "        "
    ]
   },
   {
@@ -289,7 +527,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "1.5 hours "
    ]
   },
   {
