Completed Reading Journal

--- a/day16_reading_journal.ipynb
+++ b/day16_reading_journal.ipynb
@@ -19,7 +19,20 @@
    "source": [
     "## [Appendix B](http://www.greenteapress.com/thinkpython/html/thinkpython022.html)\n",
     "\n",
-    "You only need to read as far as section B.2 (inclusive), but feel free to go further and try more exercises if you are interested."
+    "You only need to read as far as section B.2 (inclusive), but feel free to go further and try more exercises if you are interested.\n",
+    "\n",
+    "\n",
+    "#### Analysis of Algorithms\n",
+    "1. The goal is to make meaningful comparisons between algorithms\n",
+    "2. speed of analysis dependent on machine capabilities\n",
+    "3. performance depends on how much the dataset is sorted\n",
+    "4. performance also depends on size of dataset\n",
+    "\n",
+    "#### Order of Growth\n",
+    "1. set of functions whose asymptotic growth behavior is equivalent (same exponent)\n",
+    "1. leading term is the term with the highest exponent\n",
+    "2. point at which on algorithm is better than another is the crossover point\n",
+    "3. Big-Oh notation - O(n), Use leading term for Big-Oh notation"
    ]
   },
   {
@@ -48,12 +61,12 @@
     "solution": "Exercise B.1"
    },
    "source": [
-    "  1. \n",
-    "  2. \n",
-    "  3. \n",
-    "  4. \n",
-    "  5. \n",
-    "  6. "
+    "  1. All are cubic\n",
+    "  2. cubic\n",
+    "  3. O(g) will be the leading term in f\n",
+    "  4. O(g) will be the highest leading term between f1 and f2\n",
+    "  5. f1 + f2 = O(g+h)\n",
+    "  6. f1 * f2 = O(gh)"
    ]
   },
   {
@@ -75,7 +88,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "About 30 minutes "
    ]
   },
   {
