--- a/day19_reading_journal.ipynb
+++ b/day19_reading_journal.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 19.1"
@@ -52,7 +52,7 @@
        "TestResults(failed=0, attempted=5)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,11 +71,12 @@
     "      ...\n",
     "    TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'\n",
     "    \"\"\"\n",
-    "    result = []\n",
-    "    for item in seq:\n",
-    "        squared_value = item **2\n",
-    "        result.append(squared_value)\n",
-    "    return result\n",
+    "#     result = []\n",
+    "#     for item in seq:\n",
+    "#         squared_value = item **2\n",
+    "#         result.append(squared_value)\n",
+    "#     return result\n",
+    "    return [item**2 for item in seq]\n",
     "\n",
     "def evens(seq):\n",
     "    \"\"\"\n",
@@ -86,11 +87,12 @@
     "    >>> evens(square(range(5)))\n",
     "    [0, 4, 16]\n",
     "    \"\"\"\n",
-    "    result = []\n",
-    "    for item in seq:\n",
-    "        if item % 2 == 0:\n",
-    "            result.append(item)\n",
-    "    return result\n",
+    "#     result = []\n",
+    "#     for item in seq:\n",
+    "#         if item % 2 == 0:\n",
+    "#             result.append(item)\n",
+    "#     return result\n",
+    "    return [item for item in seq if item%2 == 0]\n",
     "\n",
     "\n",
     "import doctest\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 19.2"
@@ -141,8 +143,10 @@
     "    >>> formal_greeting(\"Jasper\", names)\n",
     "    Howdy, stranger!\n",
     "    \"\"\"\n",
-    "    print \"Hello, Professor {}!\".format(name_dict[first_name])\n",
-    "    \n",
+    "    try:\n",
+    "        print \"Hello, Professor {}!\".format(name_dict[first_name])\n",
+    "    except:\n",
+    "        print \"Howdy, stranger!\"\n",
     "\n",
     "doctest.run_docstring_examples(formal_greeting, globals())    "
    ]
@@ -166,7 +170,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "~30 mins "
    ]
   },
   {
